syntax = "proto3";

package shopPackage;

service AuthService {
  rpc AuthUser(User) returns (AuthResponse) {};
}

message User {
  string name = 1;
  string email = 2;
  string password = 3;
  optional string address = 4;

  enum UserType {
    USER_TYPE_UNSPECIFIED = 0;
    USER_TYPE_USER = 1;
  }
}

message AuthResponse {
  string id = 1;
}